--- a/_posts/2012-11-10-jekyll.md
+++ b/_posts/2012-11-10-jekyll.md
@@ -9,7 +9,7 @@ tags: [jekyll]
 
 1. 在安装完成gem后，如果安装jekyll时出错，可以查看是否安装过gcc。
 2. jekyll默认有Maruku和Rdiscount两种解释器，除了后者要更加快速外，在语法检查方
-面也有区别，Maruku会通过报错的方式来提示有问题的语法。例如，\`如果单独使用，没有转义则会报错。建议编辑完后用Maruku解释一遍后再push到remote。
+面也有区别，Maruku会通过报错的方式来提示有问题的语法。例如，\`如果单独使用，没有转义则会报错。建议编辑完后用Maruku解释一遍后再push到remote。**不过Maruku不支持中文开始的列表，现在弃用之，换用Rdiscount。**
 3. 注册Github帐号后记得要进行邮箱验证，否则，几次push后，GitHub不再generate static pages。邮箱中会收到Page don't build的信息。
 
 **EOF**
