--- a/_posts/2012-12-15-ssh.md
+++ b/_posts/2012-12-15-ssh.md
@@ -45,7 +45,36 @@ tags: []
 关于SSH的深入学习书籍中， **SSH, The Secure Shell: The Definitive Guide**一书是我最喜欢的，网上有第二版。
 
 ### 二、相关文件及功能
-服务器端：
+***openssh:***   
+<pre>
+/etc/ssh   # ssh目录   
+/etc/ssh/moduli  #  contains prime numbers and generators for use by sshd(8) in the Diffie-Hellman Group Exchange key exchange method.   
+/usr/bin/ssh-keygen   # 密钥生成程序
+/usr/libexec/openssh
+/usr/libexec/openssh/ssh-keysign
+</pre>
+***openssh-server:***  
+/etc/pam.d/ssh-keycat 
+/etc/pam.d/sshd
+/etc/rc.d/init.d/sshd
+/etc/ssh/sshd_config  # 服务器端配置文件
+/etc/sysconfig/sshd   
+/usr/libexec/openssh/sftp-server
+/usr/libexec/openssh/ssh-keycat
+/usr/sbin/.sshd.hmac
+/usr/sbin/sshd
+
+***openssh-clients:***  
+/etc/ssh/ssh_config #客户端配置文件
+/usr/bin/.ssh.hmac
+/usr/bin/scp
+/usr/bin/sftp
+/usr/bin/slogin
+/usr/bin/ssh
+/usr/bin/ssh-add
+/usr/bin/ssh-agent
+/usr/bin/ssh-copy-id
+/usr/bin/ssh-keyscan
 
 
 ### 三、安装
@@ -55,7 +84,9 @@ openssh openssh-server
 openssh openssh-clients  
 
 ### 四、配置
-/etc/ssh/ssh_config or .ssh/config
+> 可以使用man 5 ssh_config和 man 5 sshd_config查看更详细信息
+
+/etc/ssh/ssh_config or .ssh/config  
 ***Host hostnames***: 用来声明只作用于特定的系统。  
 ***CheckHostIP yes/no***: 指定是否可以用ip地址来识别known_hosts文件中的某个系统。  
 ***ForwardX11 yes/no***: 指定是否可以通过一条安全通道以不可信模式来转发X11连接。  
